--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@tanstack/react-query": "^5.83.0",
     "bun-plugin-tailwind": "^0.0.14",
+    "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "csv-parser": "^3.2.0",
     "csv-writer": "^1.6.0",
     "lucide-react": "^0.475.0",
     "react": "^19",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19",
     "react-hook-form": "^7.54.2",
     "tailwind-merge": "^3.0.1",
