--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@tanstack/react-query": "^5.83.0",
     "bun-plugin-tailwind": "^0.0.14",
     "chart.js": "^4.5.0",
